# LGA_ThetaMacEplorer

./: .gitignore  AGENTS.md  CMakeLists.txt  compilar.sh  compilar_dev.sh
.codex/: instructions.md
.cursor/rules/: instructions.mdc
cmake/: Info.plist.in
doc/: README.md  architecture-current-state.md  hdr-grouping-observed-patterns.md  hdr-grouping-proposal.md  implementation-plan.md  logging.md  real-catalog-export.md  session-and-download-behavior.md
docs/: ChangeLog.md
include/thetaexplorer/: CameraCatalogDebugExporter.h  CameraFileInfo.h  ColorUtils.h  ConfirmDeleteDialog.h  DownloadManager.h  FileMetadataPanel.h  HdrGroupingService.h  Logger.h  MainWindow.h  MediaAssetGroup.h  PreviewPanel.h  ThetaBridge.h  ThetaCameraService.h  ThumbnailGridWidget.h  ThumbnailTileWidget.h
resources/: resources.qrc
resources/icons/: ThetaExplorer.icns  make_icns.sh
resources/styles/: dark_theme.qss
src/: main.cpp
src/bridge/: ThetaBridge.mm  ThetaBridgePrivate.h
src/services/: DownloadManager.cpp  HdrGroupingService.cpp  ThetaCameraService.cpp
src/ui/: ConfirmDeleteDialog.cpp  FileMetadataPanel.cpp  MainWindow.cpp  PreviewPanel.cpp  ThumbnailGridWidget.cpp  ThumbnailTileWidget.cpp
src/utils/: CameraCatalogDebugExporter.cpp  ColorUtils.cpp  Logger.cpp
